Audio & video controls covering dashboard bug fixed [katheroine#39]

--- a/src/assets/stylesheets/site.violet.css
+++ b/src/assets/stylesheets/site.violet.css
@@ -116,6 +116,7 @@ header
   grid-area: dashboard;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 #controls
